--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+ @charset "utf-8";
  /*header Part start*/
  *{
 	margin: 0;
@@ -70,15 +71,25 @@
 	color: black;
 	font-size: 20px;
 }
+.menubar:hover{
+
+}
+
 /*Body Part start*/
 .body1{
 	width: 100%;
 	height: 400px;
-	display: block;
+	display: block;tt
 	background-color: #101010;
 	color: white;
 	float: left;
 	margin-top: 20px;
+/*	border-color: red;
+	border-width: 4px;*/
+	/*padding-left: 10px;
+	padding-top: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;*/
 }
 .left{
 	background-color: white;
@@ -87,11 +98,15 @@
 	display: block;
 	float: left;
 	color: black
-	margin: 10px 10px 10px 10px;
+	/*margin-right: 10px;*/
+	
 }
 .left a img{
 	height: 200px;
-	width: 100%;
+	width: 90%;
+	padding-right: 10px;
+	margin-right: 10px;	
+
 }
 
 	
@@ -102,10 +117,12 @@
 	display: block;
 	float: right;
 	color: black;
+	padding: 10px 10px 10px 10px;
 }
 .right a img{
 	height: 200px;
-	width: 100%;
+	width: 90%;
+	padding: 10px 0px 10px 10px;
 }
 .right a font{
 	float: right;
@@ -123,33 +140,46 @@
 	display: block;
 	float: top;
 }
-.first a img {
+.m_img{
+	width: 100px;
+	height: 125px;
+	float: left;
+	margin-top: 5px;
+	margin-right: 10px;
+
+}
+.mid_h3{
+	padding-left: 20px;
+}
+/*.first a img {
 	width: 100px;
 	height: 130px;
 	float: left;
-}
+}*/
 .third{
 	min-height: 130px;
+
 	background-color: white;
 	display: block;
 	float: bottom;
+
 }
-.third a img{
+/*.third a img{
 	width: 100px;
 	height: 130px;
 	float: left;
-}
+}*/
 
 .second{
 	min-height: 140px;
 	background-color: white;
 	display: block;
 }
-.second a img{
+/*.second a img{
 	width: 100px;
 	height: 140px;
 	float: left;
-}
+}*/
 
 .wellcome{
 	width: 100%;
@@ -354,4 +384,62 @@
 	vertical-align: middle;
 	border: 2px solid #101010;
 
+}
+
+/*From here Polotics */
+
+.pol-header{
+	float: left;
+	margin-left: 0px;
+}
+.p_body{
+	width: 80%;
+	height: 500px;
+	display: block;
+	margin: 0 auto;
+	background-color: #101010;
+
+}
+.p_follow{
+	width: 30%;
+	height: 500px;
+	float: right;
+	background-color: red;
+
+}
+
+
+}
+.p_header2{
+	margin: 0 auto;
+	
+	
+}
+.pol_first{
+	margin: 0 auto;
+	background-color: white;
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 0px;
+	float: left;
+	height: 800px;
+	width: 65%;
+}
+.oth_page_img{
+	width: 100%;
+	height: 300px;
+}
+.oth_page_latest{
+	margin-top: 20px;
+
+}
+.oth_page_img_latest{
+	float: right;
+	margin: 0 auto;
+	height: 200px;
+	width: 250px; 
+}
+.bookmarked{
+	float: right;
 }
